# CryptoHelper

./: README.md  main.py  pyproject.toml
crypto_helper/: __init__.py  _compat.py  _requests_stub.py  engine.py  patterns.py
crypto_helper/exchanges/: __init__.py  base.py  binance.py  bybit.py  kucoin.py
crypto_helper/indicators/: __init__.py  core.py
crypto_helper/notifications/: __init__.py  telegram.py
tests/: test_engine.py
