[project]
name = "crypto-helper"
version = "0.1.0"
description = "Crypto signal engine with exchange integrations and Telegram notifications"
authors = [{ name = "CryptoHelper" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
